--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
         </div>
         <div class="text-box join-team">
             <span>Join our team</span>
+            <span class="cmg-container">
+                <img class="cmg" src="cmg.png" alt="cmg">
+            </span>
         </div>
     </div>
 </body>
