Add logo images

--- a/index.html
+++ b/index.html
@@ -14,12 +14,25 @@
             <span>Familiar?</span>
         </div>
         <div class="logos">
-            <div>Node</div>
-            <div>Mongo</div>
-            <div>React</div>
-            <div>JS</div>
-            <div>CSS</div>
-            <div>HTML</div>
+            <div>
+                <img src="https://upload.wikimedia.org/wikipedia/commons/d/d9/Node.js_logo.svg" alt="node">
+            </div>
+            <div>
+                <img src="mongodb.svg" alt="mongodb">
+            </div>
+            <div>
+                <img src="https://upload.wikimedia.org/wikipedia/commons/a/a7/React-icon.svg" alt="">
+            </div>
+            <div>
+                <img src="https://upload.wikimedia.org/wikipedia/commons/6/6a/JavaScript-logo.png" alt="javascript">
+            </div>
+            <div>
+                <img id="css" src="https://upload.wikimedia.org/wikipedia/commons/d/d5/CSS3_logo_and_wordmark.svg"
+                    alt="css">
+            </div>
+            <div>
+                <img src="https://upload.wikimedia.org/wikipedia/commons/6/61/HTML5_logo_and_wordmark.svg" alt="html">
+            </div>
         </div>
         <div class="text-box join-team">
             <span>Join our team</span>
